tests/ui/errors/snapshots/parse_error_recovery_unclosed_type_args_wrong_bracket.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:2:21]
 1 │ 
 2 │ fn test(x: Slice<int) {}
   ·                     ┬
   ·                     ╰── expected `>`
   ╰────
  help: Add `>` to close the type arguments · code: [parse.syntax_error]
